# bot

./: .gitignore  README.md  pyproject.toml
bot/: __init__.py  __init__.py.env  config.json
bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bot/cogs/: channelarchive.py  cogtemplate.py  config.py  dad.py  debug.py  dependency.py  icon.py  icons.py  infiltration.py  loading.py  loading_redundant.py  malding.py  management.py  minecraft.py  noplead.py  nsfwfilter.py  persistent_state_broker.py  resnet152_model_v2.pth  scheduler.py
bot/icons/: 572601287363919900
minecraft-bot/: __init__.py.env
minecraft-bot/cogs/: config.py  loading.py  minecraft.py  tempCodeRunnerFile.py
