[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Otisdog8 <otis@otisroot.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "2.0.0"
python-dotenv = "^0.14.0"
mcrcon = "^0.6.0"
pystemd = "^0.8.0"
fastai = "^2.7.9"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.17.2"
flake8 = "^3.8.3"
black = "^20.8b1"

[tool.poetry.scripts]
bot = "bot:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
